--- a/src/app/nova-transfer/nova-transfer.component.scss
+++ b/src/app/nova-transfer/nova-transfer.component.scss
@@ -1,5 +1,5 @@
 .formulario {
-  background-color: white;
+  background-color: rgb(250, 255, 109);
   padding: 16px;
   border-radius: 4px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
