--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <a routerLink="extrato">ByteBank</a>
-  <a routerLink="nova-transfer">Nova Transferência</a>
+  <a routerLink="nova-transfer" routerLinkActive="ativo">Nova Transferência</a>
 </header>
 <main>
   <router-outlet></router-outlet>
